force-app/main/default/objects/Case/fields/Jira_Priority__c.field-meta.xml
<CustomField>
    <fullName>Jira_Priority__c</fullName>
    <label>Jira Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Should Have</fullName>
            </value>
            <value>
                <fullName>Nice To Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>