force-app/main/default/objects/Case/fields/JIRA_Resolution__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Resolution__c</fullName>
    <label>JIRA Resolution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>