force-app/main/default/objects/Case/fields/Jira_Support_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Support_Ticket__c</fullName>
    <description>The URL to the JIRA Ticket record</description>
    <inlineHelpText>Add the direct URL for the JIRA Ticket record</inlineHelpText>
    <label>Jira Support Ticket</label>
    <type>Url</type>
</CustomField>