force-app/main/default/objects/Case/fields/JIRA_Type__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Type__c</fullName>
    <label>JIRA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
                <isActive>false</isActive>
                <label>Bug</label>
            </value>
            <value>
                <fullName>Chore</fullName>
                <isActive>false</isActive>
                <label>Chore</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
                <isActive>false</isActive>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Data Update</fullName>
                <isActive>false</isActive>
                <label>Data Update</label>
            </value>
            <value>
                <fullName>Feature</fullName>
                <isActive>false</isActive>
                <label>Feature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>