force-app/main/default/objects/Case/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <formula>If(Created_Month__c =&#39;July&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>