force-app/main/default/objects/Case/fields/Jun__c.field-meta.xml
<CustomField>
    <fullName>Jun__c</fullName>
    <formula>If(Created_Month__c =&#39;June&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jun</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>