force-app/main/default/objects/Case/fields/Justification_of_Change_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Justification_of_Change_to_Date__c</fullName>
    <label>Justification of Change to Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>