force-app/main/default/objects/Case/fields/Kick_off_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Call_Scheduled__c</fullName>
    <inlineHelpText>This field will be automatically filled when the Schedule Kick-ff Call task is completed</inlineHelpText>
    <label>Kick-off Call Scheduled</label>
    <type>Date</type>
</CustomField>