force-app/main/default/objects/Case/fields/KPI_Met__c.field-meta.xml
<CustomField>
    <fullName>KPI_Met__c</fullName>
    <formula>If( KPI_Timer_Minutes__c &lt;= 240, True, False)</formula>
    <label>KPI Met</label>
    <type>Checkbox</type>
</CustomField>