force-app/main/default/objects/Case/fields/KPI_Timer_Minutes__c.field-meta.xml
<CustomField>
    <fullName>KPI_Timer_Minutes__c</fullName>
    <label>KPI Timer (Minutes)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>