force-app/main/default/objects/Case/fields/Last_Modified_Alias__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Alias__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified Alias</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesModified</relationshipName>
    <type>Lookup</type>
</CustomField>