force-app/main/default/objects/Case/fields/Latest_Solution__c.field-meta.xml
<CustomField>
    <fullName>Latest_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>