force-app/main/default/objects/Case/fields/Level_3_Counter__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Level 3 Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>