force-app/main/default/objects/Case/fields/Live_API_and_ECN_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Live_API_and_ECN_Credentials__c</fullName>
    <label>Live API and ECN Credentials</label>
    <type>TextArea</type>
</CustomField>