force-app/main/default/objects/Case/fields/Live_API_and_ECN_Credentials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Live_API_and_ECN_Credentials_Sent__c</fullName>
    <inlineHelpText>This will be automatically filled in when the task &#39;API Delivery - Live API and ECN Credentials Task&#39; is completed</inlineHelpText>
    <label>Live API and ECN Credentials Sent</label>
    <type>Date</type>
</CustomField>