force-app/main/default/objects/Case/fields/Live_Testing_Checkpoint_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Testing_Checkpoint_Completed_Date__c</fullName>
    <inlineHelpText>Please enter the date when the live testing was completed</inlineHelpText>
    <label>Live Testing Checkpoint Completed Date</label>
    <type>Date</type>
</CustomField>