force-app/main/default/objects/Case/fields/Live_Testing_Checkpoint_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Testing_Checkpoint_Due_Date__c</fullName>
    <inlineHelpText>This field will be automatically filled in when the task &#39;API Delivery - Live Testing Completion Task&#39; is created. The default date will be the due date of the task. 
Changing the Due Date in the task will change the date of this field.</inlineHelpText>
    <label>Live Testing Checkpoint Due Date</label>
    <type>Date</type>
</CustomField>