force-app/main/default/objects/Case/fields/Live_Testing_Checkpoint_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Live_Testing_Checkpoint_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Live Testing Completion Task was created and assigned to the delivery owner.</inlineHelpText>
    <label>Live Testing Checkpoint Task Created</label>
    <type>Date</type>
</CustomField>