force-app/main/default/objects/Case/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <formula>If( Created_Month__c =&#39;March&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>