force-app/main/default/objects/Case/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <formula>If(Created_Month__c =&#39;May&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>May</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>