force-app/main/default/objects/Case/fields/Move_To_Pending__c.field-meta.xml
<CustomField>
    <fullName>Move_To_Pending__c</fullName>
    <inlineHelpText>Enter the date when the delivery was moved to Pending.</inlineHelpText>
    <label>Move To Pending</label>
    <type>Date</type>
</CustomField>