force-app/main/default/objects/Case/fields/NDA_Developer_Signature_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>NDA_Developer_Signature_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In some cases, NDA/Developer licence does not need to be signed.
Select this checkbox if this is the case.  If checked, the date for the NDA Signed and Countersigned fields will not need to be completed.</inlineHelpText>
    <label>NDA/Developer Signature Not Required</label>
    <type>Checkbox</type>
</CustomField>