force-app/main/default/objects/Case/fields/No_of_Surveys_Sent__c.field-meta.xml
<CustomField>
    <fullName>No_of_Surveys_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Surveys Sent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>