force-app/main/default/objects/Case/fields/Not_Trans_12_Days_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Not_Trans_12_Days_Task_Created__c</fullName>
    <inlineHelpText>This is the date when a notification was sent to the account manager requesting that they call the client to confirm everything is ok. This date is automatically set. The date is taken from the &#39;Funding Confirmed&#39; date.</inlineHelpText>
    <label>Not Trans-12 Days Task Created</label>
    <type>Date</type>
</CustomField>