force-app/main/default/objects/Case/fields/Not_Trans_4_Days__c.field-meta.xml
<CustomField>
    <fullName>Not_Trans_4_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox will be checked if no transactions have been recorded 4 days after the &#39;Funding Confirmed&#39; date was entered.  This checkbox is automatically selected.</inlineHelpText>
    <label>Not Trans-4 Days</label>
    <type>Checkbox</type>
</CustomField>