force-app/main/default/objects/Case/fields/Not_Trans_4_Days_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Not_Trans_4_Days_Email_Sent__c</fullName>
    <inlineHelpText>This is the date when an email was sent to the client checking the status and confirming everything is ok.  This date is automatically set.  The date is taken from the &#39;Funding Confirmed&#39; date.</inlineHelpText>
    <label>Not Trans-4 Days Email Sent</label>
    <type>Date</type>
</CustomField>