force-app/main/default/objects/Case/fields/Not_Trans_8_Days_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Not_Trans_8_Days_Task_Created__c</fullName>
    <inlineHelpText>This is the date when a Task was created and assigned to the delivery owner to contact the client and confirm everything is ok. This date is automatically set. The reference date is taken from the &#39;Funding Confirmed&#39; date.</inlineHelpText>
    <label>Not Trans-8 Days Task Created</label>
    <type>Date</type>
</CustomField>