force-app/main/default/objects/Case/fields/Notify_Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Notify_Estimated_Completion_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox would be modified when the estimated completion is in the past.</description>
    <label>Notify Estimated Completion Date</label>
    <type>Checkbox</type>
</CustomField>