force-app/main/default/objects/Case/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <formula>If(Created_Month__c =&#39;November&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nov</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>