force-app/main/default/objects/Case/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <formula>If(Created_Month__c =&#39;October&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>