force-app/main/default/objects/Case/fields/On_Behalf_of_Account__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf of Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ticket Created On Behalf of Account</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>