force-app/main/default/objects/Case/fields/On_Behalf_of_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Account_Country__c</fullName>
    <formula>Text (On_Behalf_of_Account__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Behalf of Account Country</label>
    <type>Text</type>
</CustomField>