force-app/main/default/objects/Case/fields/On_Behalf_of_Account_Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Account_Customer_Tier__c</fullName>
    <formula>Text(On_Behalf_of_Account__r.Customer_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Behalf of Account Customer Tier</label>
    <type>Text</type>
</CustomField>