force-app/main/default/objects/Case/fields/on_Behalf_of_Account_ECN__c.field-meta.xml
<CustomField>
    <fullName>on_Behalf_of_Account_ECN__c</fullName>
    <formula>On_Behalf_of_Account__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Behalf of Account ECN</label>
    <type>Text</type>
</CustomField>