force-app/main/default/objects/Case/fields/On_Behalf_of_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Account_Region__c</fullName>
    <formula>Text (On_Behalf_of_Account__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Behalf of Account Region</label>
    <type>Text</type>
</CustomField>