force-app/main/default/objects/Case/fields/On_Behalf_of_Account_Service_Segment__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Account_Service_Segment__c</fullName>
    <formula>Text (On_Behalf_of_Account__r.Service_Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Behalf of Account Service Segment</label>
    <type>Text</type>
</CustomField>