force-app/main/default/objects/Case/fields/On_Behalf_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>On Behalf of Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>