force-app/main/default/objects/Case/fields/On_Behalf_of_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Contact_Email__c</fullName>
    <formula>On_Behalf_of_Contact__r.Email</formula>
    <label>On Behalf of Contact Email</label>
    <type>Text</type>
</CustomField>