force-app/main/default/objects/Case/fields/One_Week_Funding_New_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Week_Funding_New_Due_Date__c</fullName>
    <inlineHelpText>This is the funding due date plus 1 week .</inlineHelpText>
    <label>One Week Funding New Due Date</label>
    <type>Date</type>
</CustomField>