force-app/main/default/objects/Case/fields/Opportunity_GDV__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_GDV__c</fullName>
    <formula>Related_Delivery_Opportunity__r.Attainable_TTV_annual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>