force-app/main/default/objects/Case/fields/Orig_Estm_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Orig_Estm_Completion_Date__c</fullName>
    <label>Orig Estm Completion Date</label>
    <type>Date</type>
</CustomField>