force-app/main/default/objects/Case/fields/Pending_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pending_Notes__c</fullName>
    <label>Pending Notes</label>
    <type>TextArea</type>
</CustomField>