force-app/main/default/objects/Case/fields/Percentage_of_Projected_Date_Fields_Set__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Projected_Date_Fields_Set__c</fullName>
    <formula>((If( NOT(ISNULL(Projected_Development_Completed__c)),20,0))+(If( NOT(ISNULL( Projected_Live_Testing_Completed__c )),20,0))+(If( NOT(ISNULL( Projected_Production_Cut_Over__c )),20,0))+(If( NOT(ISNULL( Projected_UAT_Completed__c )),20,0))+(If( NOT(ISNULL( Projected_Planning_and_Prep_Completed__c )),20,0)))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Projected Date Fields Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>