force-app/main/default/objects/Case/fields/Phase_1_Notes_History__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Notes_History__c</fullName>
    <label>Phase 1 Notes History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>