force-app/main/default/objects/Case/fields/Phase_2_Notes__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>