force-app/main/default/objects/Case/fields/Phase_2_VAN_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_VAN_Training_Completed_Date__c</fullName>
    <label>Phase 2 VAN Training Completed Date</label>
    <type>Date</type>
</CustomField>