force-app/main/default/objects/Case/fields/Post_Training_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Post_Training_Email_Sent__c</fullName>
    <inlineHelpText>The date when the email was sent to the client following the completion of the training.  The email is automatically sent when the &#39;Training Completed&#39; date is entered.</inlineHelpText>
    <label>Post Training Email Sent</label>
    <type>Date</type>
</CustomField>