force-app/main/default/objects/Case/fields/Post_Training_Email_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Post_Training_Email_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Post Training Email Task was created.  This field is automatically populated.</inlineHelpText>
    <label>Post Training Email Task Created</label>
    <type>Date</type>
</CustomField>