force-app/main/default/objects/Case/fields/Post_Training_GDS_Email_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Post_Training_GDS_Email_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Post Training GDS Notification Task was created</inlineHelpText>
    <label>Post Training GDS Email Task Created</label>
    <type>Date</type>
</CustomField>