force-app/main/default/objects/Case/fields/Pre_Kick_off_Questionnaire_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pre_Kick_off_Questionnaire_Sent__c</fullName>
    <inlineHelpText>This field is automatically set when the Kick-off Questionnaire Task is set to Completed.</inlineHelpText>
    <label>Pre Kick-off Questionnaire Sent</label>
    <type>Date</type>
</CustomField>