force-app/main/default/objects/Case/fields/Prev_Est_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Prev_Est_Completion_Date__c</fullName>
    <label>Prev Estm Completion Date</label>
    <type>Date</type>
</CustomField>