force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agoda Pro Portal</fullName>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
            <value>
                <fullName>eNett Gateway</fullName>
            </value>
            <value>
                <fullName>feeNett</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>No eNett Product</fullName>
            </value>
            <value>
                <fullName>VANs</fullName>
            </value>
            <value>
                <fullName>VANs Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>