force-app/main/default/objects/Case/fields/Projected_Milestones_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projected_Milestones_Task_Completed__c</fullName>
    <inlineHelpText>This field will be automatically filled when the Projected Milestones task is completed.</inlineHelpText>
    <label>Projected Milestones Task Completed</label>
    <type>Date</type>
</CustomField>