force-app/main/default/objects/Case/fields/Projected_Planning_and_Prep_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projected_Planning_and_Prep_Completed__c</fullName>
    <inlineHelpText>This field is automatically populated upon completion of the Milestone Task. Please leave blank until the Task is completed.</inlineHelpText>
    <label>Projected Planning and Prep Completed</label>
    <type>Date</type>
</CustomField>