force-app/main/default/objects/Case/fields/Projected_Production_Cut_Over__c.field-meta.xml
<CustomField>
    <fullName>Projected_Production_Cut_Over__c</fullName>
    <inlineHelpText>This field is automatically populated upon completion of the Milestone Task. Please leave blank until the Task is completed.</inlineHelpText>
    <label>Projected Production Cut Over</label>
    <type>Date</type>
</CustomField>