force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Client Error - Didn’t Request Sameday Payment</fullName>
            </value>
            <value>
                <fullName>Client Error - No ECN Provided</fullName>
            </value>
            <value>
                <fullName>Client Error - Wrong Details Used</fullName>
            </value>
            <value>
                <fullName>Clients Bank Error</fullName>
            </value>
            <value>
                <fullName>Citi Error</fullName>
            </value>
            <value>
                <fullName>Local Clearing Issue</fullName>
            </value>
            <value>
                <fullName>Cut-off Time / Bank Holiday</fullName>
            </value>
            <value>
                <fullName>eNett Error</fullName>
            </value>
            <value>
                <fullName>Tech / Feed Issue</fullName>
            </value>
            <value>
                <fullName>Wrong Account Used / Account Closed</fullName>
            </value>
            <value>
                <fullName>Incorrect Details Used - Bank Unable To Apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>