force-app/main/default/objects/Case/fields/Reasons_for_Not_Meeting_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Not_Meeting_Milestones__c</fullName>
    <label>Reasons for Not Meeting Milestones</label>
    <type>TextArea</type>
</CustomField>