force-app/main/default/objects/Case/fields/Related_Delivery_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Delivery_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Delivery Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Delivery Phase Tickets</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>