force-app/main/default/objects/Case/fields/Reporting_Requirement_Defined__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirement_Defined__c</fullName>
    <inlineHelpText>Please enter the date when the reporting requirements are defined.</inlineHelpText>
    <label>Reporting Requirement Defined</label>
    <type>Date</type>
</CustomField>