force-app/main/default/objects/Case/fields/Reporting_Training_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Training_Due_Date__c</fullName>
    <inlineHelpText>This will be automatically updated when the due date in Task is changed</inlineHelpText>
    <label>Reporting Training Due Date</label>
    <type>Date</type>
</CustomField>