force-app/main/default/objects/Case/fields/Reporting_Training_Session_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Training_Session_Completed__c</fullName>
    <inlineHelpText>This is the date when the Reporting and Reconciliation Training was completed.</inlineHelpText>
    <label>Reporting Training Session Completed</label>
    <type>Date</type>
</CustomField>