force-app/main/default/objects/Case/fields/Reporting_Training_Session_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Training_Session_Task_Created__c</fullName>
    <inlineHelpText>This is the date that the Reporting Training Session Task was created.</inlineHelpText>
    <label>Reporting Training Session Task Created</label>
    <type>Date</type>
</CustomField>