force-app/main/default/objects/Case/fields/Reports_FTP_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Reports_FTP_Folder_Name__c</fullName>
    <inlineHelpText>Enter the location of the Reports FTP folder.</inlineHelpText>
    <label>Reports FTP Folder Name</label>
    <type>TextArea</type>
</CustomField>