force-app/main/default/objects/Case/fields/Review_Milestone_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Review_Milestone_Task_Created__c</fullName>
    <inlineHelpText>If the Due Date for the Development Checkpoint 1 Task changes and is 5 days or more over the Projected Development Completed date, the user will be required to review all Milestone dates.  This is the date when the Task was created.  Auto set.</inlineHelpText>
    <label>Review Milestone Task Created</label>
    <type>Date</type>
</CustomField>