force-app/main/default/objects/Case/fields/Schedule_Kick_off_Call_Remind_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Kick_off_Call_Remind_Email_Sent__c</fullName>
    <inlineHelpText>This is the date when the Schedule Kick-off Call Reminder email was sent to the delivery owner.  The reminder will be sent 4 days after the NDA/Developer License Signed date field has been populated.</inlineHelpText>
    <label>Schedule Kick-off Call Remind Email Sent</label>
    <type>Date</type>
</CustomField>