force-app/main/default/objects/Case/fields/Schedule_Kick_off_Call_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Kick_off_Call_Task_Created__c</fullName>
    <inlineHelpText>This is the date that the Schedule Kick Off Call was created.  The Task due date has been set for 4 days from the task creation date.</inlineHelpText>
    <label>Schedule Kick-off Call Task Created</label>
    <type>Date</type>
</CustomField>