force-app/main/default/objects/Case/fields/Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Email__c</fullName>
    <formula>Secondary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Contact Email</label>
    <type>Text</type>
</CustomField>