force-app/main/default/objects/Case/fields/Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Phone__c</fullName>
    <formula>Secondary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Contact Phone</label>
    <type>Text</type>
</CustomField>