force-app/main/default/objects/Case/fields/Send_Close_Ticket_mail_to_the_CC_emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Close_Ticket_mail_to_the_CC_emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Close Ticket mail to the CC emails</label>
    <type>Checkbox</type>
</CustomField>